[gd_scene load_steps=6 format=3 uid="uid://d2g2r46iiq86e"]

[ext_resource type="Texture2D" uid="uid://bbc7i5tym38k0" path="res://Sprites/ArcoPlaceHolder.png" id="1_eexu7"]
[ext_resource type="Script" uid="uid://doj2socmukkvk" path="res://Scenes/arco.gd" id="1_vur6d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vur6d"]
size = Vector2(6, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqorm"]
atlas = ExtResource("1_eexu7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_txjaa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqorm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Arco" type="Node2D"]
scale = Vector2(2.400001, 2.400001)
script = ExtResource("1_vur6d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_vur6d")

[node name="offset" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="offset"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_txjaa")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
